--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,174 +1,23 @@
 ---
-title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
+title: Welcome to Middleman
 ---
 
-  <!--Carousel Super Wrapper-->
-  <div class=super-wrapper>
-    <!--Carousel Wrapper-->
-    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
-      <!--Indicators-->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-2" data-slide-to="1"></li>
-        <li data-target="#carousel-example-2" data-slide-to="2"></li>
-        <li data-target="#carousel-example-2" data-slide-to="3"></li>
-        <li data-target="#carousel-example-2" data-slide-to="4"></li>
-        <li data-target="#carousel-example-2" data-slide-to="5"></li>
-        <li data-target="#carousel-example-2" data-slide-to="6"></li>
-      </ol>
-      <!--/.Indicators-->
-      <!--Slides-->
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561042664/sito/Carousel/1.pressoffice_digitalpr____mdclyu.jpg"
-              alt="Olimpia Rospigliosi Agency Press Office & Pr">
-            <div class="mask rgba-black-light"></div>
-          </div>
-          <div class="carousel-caption">
-            <h3>Press Office & PR</h3>
-            <p>Comunicazione di Prodotto a giornalisti e stylists, e product placement.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561051216/sito/Carousel/2.organizzazioneeventi_gy18ps.jpg"
-              alt="Olimpia Rospigliosi Agency Organizzazione Eventi">
-            <div class="mask rgba-black-strong"></div>
-          </div>
-          <div class="carousel-caption">
-              <h3>Organizzazione Eventi</h3>
-              <p>Presentazioni collezioni, press days, opening e mostre. Gestione accurata della lista degli invitati.
-              </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561106811/sito/Carousel/3.supportocommerciale_h0vb3z.jpg"
-              alt="Olimpia Rospigliosi Agency Supporto Commerciale">
-            <div class="mask rgba-black-slight"></div>
-          </div>
-          <div class="carousel-caption">
-            <h3>Supporto Commerciale</h3>
-            <p>Consulenza per il posizionamento del marchio e del mercato di riferimento, introduzione a fiere di settore e presentazione a showroom.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561047866/sito/Carousel/4.scouting_2_i1n0ld.jpg"
-              alt="Olimpia Rospigliosi Agency Scouting new talents">
-            <div class="mask rgba-black-slight"></div>
-          </div>
-          <div class="carousel-caption">
-            <h3>Scouting di new talents</h3>
-            <p>Ricerca di nuovi talents creativi per marchi consolidati e fashion weeks.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561048805/sito/Carousel/5.consulenzadimmagine_ipfxee.jpg"
-              alt="Olimpia Rospigliosi Agency Consulenza d'Immagine">
-            <div class="mask rgba-black-slight"></div>
-          </div>
-          <div class="carousel-caption">
-            <h3>Consulenza d’Immagine</h3>
-            <p>Costruzione di immagine e strategia di comunicazione.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561367311/sito/Carousel/6.showroom_wfyeh5.jpg"
-              alt="Olimpia Rospigliosi Agency Showroom & Mostre">
-            <div class="mask rgba-black-slight"></div>
-          </div>
-          <div class="carousel-caption">
-            <h3>Showroom & Mostre</h3>
-            <p>Spazio espositivo per prodotto, eventi e mostre.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-            <!--Mask color-->
-            <div class="view">
-              <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561048528/sito/Carousel/3_049_xmt5nb.jpg"
-                alt="Olimpia Rospigliosi Agency Social Media Management & Web Pr">
-              <div class="mask rgba-black-slight"></div>
-            </div>
-            <div class="carousel-caption">
-              <h3>Social Media Management & Web PR</h3>
-              <p>Creazione di contenuti digitali. Pianificazione della diffusione sul web e sui social networks.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--/.Slides-->
-      <!--Controls-->
-      <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-      <!--/.Controls-->
-    </div>
-    <!--/.Carousel Wrapper-->
-  </div>
-  <!--Carousel Super Wrapper-->
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
+  <title id="middleman-logo__title">Middleman</title>
+  <path class="middleman-logo__top-left-bar" fill-opacity=".45" d="M0 40L200 0v30L0 60z"/>
+  <path class="middleman-logo__top-right-bar" fill="#fff" d="M200 0l200 40v20L200 30z"/>
+  <path class="middleman-logo__left-m" fill-opacity=".45" d="M0 78v184l45 5V152l45 83 47-83v129l53 7V52l-57 8-43 83-43-70z"/>
+  <path class="middleman-logo__right-m" fill="#fff" d="M400 78v184l-45 5V152l-45 83-47-83v129l-53 7V52l57 8 43 83 43-70z"/>
+  <path class="middleman-logo__bottom-left-bar" fill-opacity=".45" d="M0 300l200 40v-30L0 280z"/>
+  <path class="middleman-logo__bottom-right-bar" fill="#fff" d="M200 340l200-40v-20l-200 30z"/>
+</svg>
 
+<h1>
+  Middleman is Running
+</h1>
 
-<div class="banner bg-white">
-
-  <div class="container text-center padding-top-bottom">
-    <div class="content-presentation">
-
-      <div class="content-presentation-title">
-        <h3>Pubbliche relazioni & Comunicazione</h3>
-      </div>
-
-      <div class="content-presentation-sub-title">
-        <h6><em>OR - Olimpia Rospigliosi</em></h6>
-      </div>
-
-      <hr align="center" width="10%">
-
-      <div class="content-presentation-text-title">
-        <p><strong>OR è un’agenzia italiana di pubbliche relazioni & comunicazione, che collabora con marchi di moda, design, lifestyle ed artisti, affiancandoli nello sviluppo della loro immagine e nel loro sviluppo commerciale.</strong></p>
-      </div>
-
-      <div class="content-presentation-text">
-        <p class="font-weight-light">Scegliamo accuratamente i nostri clienti e creiamo un percorso di affiancamento personalizzato per portarli a sviluppare il loro marchio e il loro fatturato, sul lungo termine. La grande preparazione professionale e la creatività dei nostri collaboratori ci permettono di trovare soluzioni su misura per ogni canale comunicativo: stampa, web, socials, influencers, celebrities...Accompagniamo i marchi e gli artisti nella loro strategia di sviluppo e li affianchiamo nelle attività di pubbliche relazioni ed ufficio stampa, nello sviluppo di contenuti digitali, nella ricerca di nuovi collaboratori creativi, nella produzione di eventi o mostre, e nel supporto commerciale.
-        </p>
-      </div>
-      </div>
-  </div>
-</div>
-
-<div class="banner bg-light-gray">
-  <div class="container text-center padding-top-bottom" id="marbo-60">
-    <div>
-      <h3>Eventi realizzati</h3>
-    </div>
-    <div class="row cards-event">
-      <% data.events.each do |event| %>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card-event">
-            <%= image_tag "#{event.picture}" %>
-            <div class="card-event-details d-flex flex-column justify-content-between">
-              <h2><%= event.title %></h2>
-              <h3><%= event.date %></h3>
-            </div>
-          </div>
-        </div><!--/.col-->
-      <% end %>
-    </div><!--/.row-->
-  </div>
-</div>
-
-
+<%= link_to(
+  "Read Documentation",
+  "https://middlemanapp.com/basics/templating_language/",
+  target: "_blank"
+) %>
