--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,50 +6,11 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title %></title>
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
-    <%= favicon_tag 'images/logo_or.png' %>
-    <!-- Google result text-->
-    <title>Olimpia Rospigliosi Agency | PR & Comunicazione</title>
-    <!-- Google result description-->
-    <meta name="description" content="OR è un'agenzia italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte.">
-
-    <!-- Facebook -->
-    <meta property="og:site_name" content="Olimpia Rospigliosi Agency"/>
-    <meta property="og:title" content="Olimpia Rospigliosi Agency - PR & Comunicazione" />
-    <meta property="og:description" content="OR è un'agenzia italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte."/>
-    <meta property="og:image" itemprop="image" content="https://res.cloudinary.com/pimpi1/image/upload/v1561313188/sito/Meta/meta_profile_femvpe.jpg" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.olimpiarospigliosi.it/"/>
-
-    <!-- Twitter -->
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@OlimpiaRospigli">
-    <meta name="twitter:title" content="Olimpia Rospigliosi Agency - PR & Communicazione">
-    <meta name="twitter:description" content="OR è una societa italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte.">
-    <meta name="twitter:creator" content="@OlimpiaRospigli">
-    <meta name="twitter:image:src" content="http://twitter-card.jpg">
-
-
+    <title><%= current_page.data.title || "Middleman" %></title>
+    <%= stylesheet_link_tag "site" %>
+    <%= javascript_include_tag "site" %>
   </head>
-
   <body>
-    <%= partial "layouts/navbar" %>
     <%= yield %>
-    <%= partial "layouts/footer_top" %>
-    <%= partial "layouts/footer_bottom" %>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142468167-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-142468167-1');
-    </script>
-
   </body>
 </html>
