--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,6 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
         <li data-target="#carousel-example-2" data-slide-to="3"></li>
         <li data-target="#carousel-example-2" data-slide-to="4"></li>
         <li data-target="#carousel-example-2" data-slide-to="5"></li>
-        <li data-target="#carousel-example-2" data-slide-to="6"></li>
       </ol>
       <!--/.Indicators-->
       <!--Slides-->
@@ -26,8 +25,8 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-light"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Press Office & PR</h3>
-            <p>Comunicazione di Prodotto a giornalisti e stylists, e product placement.</p>
+            <h3>Assaporami on-demand</h3>
+            <p>Una tarrifa dolce per i vostri collaboratori. L'azienda può participare alla spesa del pranzo.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -38,8 +37,8 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-strong"></div>
           </div>
           <div class="carousel-caption">
-              <h3>Organizzazione Eventi</h3>
-              <p>Presentazioni collezioni, press days, opening e mostre. Gestione accurata della lista degli invitati.
+              <h3>Assaporami corner</h3>
+              <p>Assaporami presso i vostri uffici. Soluzione modulabile (pranzo e collazione) integrata al vostro arredamento.
               </p>
           </div>
         </div>
@@ -51,8 +50,8 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Supporto Commerciale</h3>
-            <p>Consulenza per il posizionamento del marchio e del mercato di riferimento, introduzione a fiere di settore e presentazione a showroom.</p>
+            <h3>Fresh wall</h3>
+            <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -63,8 +62,8 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Scouting di new talents</h3>
-            <p>Ricerca di nuovi talents creativi per marchi consolidati e fashion weeks.</p>
+            <h3>Exclusive lunch bag</h3>
+            <p>Ricette esclusive per le vostre riunioni piu importanti.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -75,8 +74,8 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Consulenza d’Immagine</h3>
-            <p>Costruzione di immagine e strategia di comunicazione.</p>
+            <h3>Power staff meeting</h3>
+            <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i vostri collaboratori</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -87,25 +86,10 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Showroom & Mostre</h3>
-            <p>Spazio espositivo per prodotto, eventi e mostre.</p>
+            <h3>Assporami Event</h3>
+            <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili, presentazione ricette...</p>
           </div>
         </div>
-        <div class="carousel-item">
-            <!--Mask color-->
-            <div class="view">
-              <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561048528/sito/Carousel/3_049_xmt5nb.jpg"
-                alt="Olimpia Rospigliosi Agency Social Media Management & Web Pr">
-              <div class="mask rgba-black-slight"></div>
-            </div>
-            <div class="carousel-caption">
-              <h3>Social Media Management & Web PR</h3>
-              <p>Creazione di contenuti digitali. Pianificazione della diffusione sul web e sui social networks.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
       <!--/.Slides-->
       <!--Controls-->
       <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
@@ -129,21 +113,21 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
     <div class="content-presentation">
 
       <div class="content-presentation-title">
-        <h3>Pubbliche relazioni & Comunicazione</h3>
+        <h3>Assaporami Business - Le nuove soluzione ristorative per aziende</h3>
       </div>
 
       <div class="content-presentation-sub-title">
-        <h6><em>OR - Olimpia Rospigliosi</em></h6>
+        <h6><em>La migliore pausa pranzo per i vostri collaboratori</em></h6>
       </div>
 
       <hr align="center" width="10%">
 
       <div class="content-presentation-text-title">
-        <p><strong>OR è un’agenzia italiana di pubbliche relazioni & comunicazione, che collabora con marchi di moda, design, lifestyle ed artisti, affiancandoli nello sviluppo della loro immagine e nel loro sviluppo commerciale.</strong></p>
+        <p><strong>Ogni giorno, i nostri Chef preparano dei piatti saporiti, sani, ed equilibrati, consegnati nei vostri uffici affinchè i vostri collaboratori si deliziano. Con Assaporami non ci sono più scuse per godersi la pausa pranzo.</strong></p>
       </div>
 
       <div class="content-presentation-text">
-        <p class="font-weight-light">Scegliamo accuratamente i nostri clienti e creiamo un percorso di affiancamento personalizzato per portarli a sviluppare il loro marchio e il loro fatturato, sul lungo termine. La grande preparazione professionale e la creatività dei nostri collaboratori ci permettono di trovare soluzioni su misura per ogni canale comunicativo: stampa, web, socials, influencers, celebrities...Accompagniamo i marchi e gli artisti nella loro strategia di sviluppo e li affianchiamo nelle attività di pubbliche relazioni ed ufficio stampa, nello sviluppo di contenuti digitali, nella ricerca di nuovi collaboratori creativi, nella produzione di eventi o mostre, e nel supporto commerciale.
+        <p class="font-weight-light">Abbiamo pensato a tutto ma soppratutto abbiamo pensato a Voi, ai vostri collaboratori. Non consequat et enim ea laborum laboris aliquip in culpa nisi nulla fugiat non irure irure magna id eiusmod nostrud in anim qui cupidatat. Ea reprehenderit id dolore incididunt sunt sed dolor ut deserunt eu irure ut pariatur irure reprehenderit esse in minim.
         </p>
       </div>
       </div>
