--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -86,7 +86,7 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Assporami Event</h3>
+            <h3>Assaporami Event</h3>
             <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili, presentazione ricette...</p>
           </div>
         </div>
