--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -5,8 +5,8 @@ title: Olimpia Rospigliosi Agency - Servizi
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Press Office & Pr</h2>
-      <p>Coordinamento e sviluppo dei rapporti con la stampa corporate e di prodotto, invio di comunicati alle testate cartacee e online più prestigiose di moda, design, lifestyle. Product placement in programmi televisivi, cinema e fotografia.
+      <h2 class="h2-responsive">Assaporami on-demand</h2>
+      <p>Il pranzo aziendale consegnato in ufficio. Dei piatti saporiti, sani, freschi e bilanciati. Fate beneficiare i vostri dipendenti di prezzi piu dolci. Prendete a carico una parte del pranzo e ricevete una fattura a fine mese: un'astuta soluzione alternativa ai ticket restaurant. Un dash board completo per gestire il vosto account e monitorare le vostre spese.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
@@ -21,8 +21,8 @@ title: Olimpia Rospigliosi Agency - Servizi
       <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108856/sito/Servizi/2.organizzazioneeventi_qqfcfk.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Organizzazione eventi</h2>
-      <p>Presentazione nuove collezioni, eventi social, press day e mostre. Produzione dell’intero evento, assistendo il cliente in ogni fase di pianificazione e di sviluppo del progetto. Gestione accurata della lista degli invitati per garantire un pubblico adeguato alla campagna.</p>
+      <h2 class="h2-responsive">Assaporami Corner</h2>
+      <p>Assaporami presso i vostri uffici. La soluzione è modulabile secondo le vostre esigenze (pranzo e collazione o solo pranzo) e integrata al vostro arredamento. Lo spazio comprende dei moduli refregerati e un banco per il nostro personale. Una soluzione economica, facile da integrare e pulita.</p>
     </div>
   </div>
 </div>
@@ -30,8 +30,8 @@ title: Olimpia Rospigliosi Agency - Servizi
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Supporto commerciale</h2>
-      <p>Consulenza sul posizionamento di mercato, partecipazione a fiere ed eventi, inserimento in showroom di prestigio e follow up.
+      <h2 class="h2-responsive">Fresh wall</h2>
+      <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo. Una soluzione in libero accesso che offre piatti freschi e gustosi in una vetrina refrigerata per un ottima conservazione.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
@@ -46,8 +46,8 @@ title: Olimpia Rospigliosi Agency - Servizi
       <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108911/sito/Servizi/4.scouting_wfy4fv.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Scouting di new talents</h2>
-      <p>Ricerca di nuovi talents di moda & design, per marchi consolidati e fashion weeks. Appuntamenti mirati per co-branding & partnerships.</p>
+      <h2 class="h2-responsive">Exclusive lunch bag</h2>
+      <p>Ricette esclusive per le vostre riunioni piu importanti. 3 gamme di prodotti disponibili: carne, pesce, vegetariano. Passate l'ordine entro due settimane dal vostro special lunch !</p>
     </div>
   </div>
 </div>
@@ -55,8 +55,8 @@ title: Olimpia Rospigliosi Agency - Servizi
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Consulenza d’Immagine</h2>
-      <p>Costruzione dell’immagine e strategia di comunicazione. Ricerca di risorse produttive, distributive e manageriali per rafforzare ed accrescere la notorietà del brand.
+      <h2 class="h2-responsive">Power staff meeting</h2>
+      <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i vostri collaboratori.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
@@ -71,8 +71,8 @@ title: Olimpia Rospigliosi Agency - Servizi
       <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561367311/sito/Carousel/6.showroom_wfyeh5.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Showroom e Mostre</h2>
-      <p>Nel suo ufficio milanese vengono esposte le collezioni di vari stilisti e designers, ed un’ampia parte dello spazio  offre la possibilità di ospitare mostre di arte, moda e design.
+      <h2 class="h2-responsive">Assaporami Event</h2>
+      <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili, presentazione ricette...
       </p>
     </div>
   </div>
@@ -81,8 +81,8 @@ title: Olimpia Rospigliosi Agency - Servizi
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Social Media Management & Web Pr</h2>
-      <p>Creazione di contenuti digitali. Comunicazione di prodotto a webzine, blogger, magazine online. Pianificazione della diffusione sui social networks. Attività digitali mirate.
+      <h2 class="h2-responsive">Assaporami Event</h2>
+      <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili, presentazione ricette...
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
