--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Olimpia Rospigliosi Agency - Contatti
+title: Assaporami Business - Contatti
 ---
 
 <div class="wrapper">
@@ -12,11 +12,11 @@ title: Olimpia Rospigliosi Agency - Contatti
         <div class="col-12 col-md-4 contact-details">
           <h5>CONTATTI</h5>
           <p>
-            Olimpia Rospigliosi Agency <br>
-            Piazza Borromeo, 10 <br>
-            20123 Milano - IT <br>
-            Tel. +39 0236585108 <br>
-            info@olimpiarospigliosi.it <br>
+            Assaporami <br>
+            Via Mac Mahon, 46 <br>
+            20155 Milano - IT <br>
+            Tel. +39 +390236704143 <br>
+            info@assaporami.it <br>
           </p>
         </div>
 
