--- a/source/editorials.html.erb
+++ b/source/editorials.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Olimpia Rospigliosi Agency - Pubblicazioni
+title: Assaporami Business - Pubblicazioni
 ---
 
 <div class="banner bg-light-gray border-top">
