--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
+title: Assaporami | Servizi di ristorazione aziendali innovativi
 ---
 
   <!--Carousel Super Wrapper-->
@@ -113,7 +113,7 @@ title: OR - Olimpia Rospigliosi Agency | Relazioni Pubbliche & Comunicazione
     <div class="content-presentation">
 
       <div class="content-presentation-title">
-        <h3>Assaporami Business - Le nuove soluzione ristorative per aziende</h3>
+        <h3>Assaporami Business - Le soluzionei ristorative innovative per mangiare meglio in azienda</h3>
       </div>
 
       <div class="content-presentation-sub-title">
