--- a/source/layouts/_footer_bottom.html.erb
+++ b/source/layouts/_footer_bottom.html.erb
@@ -3,16 +3,17 @@
       <div class="col-12 col-md-8 d-flex justify-content-center footer-bottom-links">
 
           <div class="footer-links">
-            <a href="https://www.facebook.com/olimpiarospigliosipr/"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/olimpiarospigliosi/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/olimpia-rospigliosi-39898a14/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/assaporami/"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/assaporami/"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/assaporami_"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
           </div>
 
       </div>
       <div class="col-12 col-md-4 d-flex justify-content-center footer-copyright">
         <div class="d-flex align-items-center">
             <i class="far fa-copyright"></i>
-            <p>2019 - Olimpia Rosipigliosi | Credit: <%= link_to "Regis Weill", "http://www.weill.it", id: "credit_link" %></p>
+            <p>2019 - Assaporami Srl | Credit: <%= link_to "Regis Weill", "http://www.weill.it", id: "credit_link" %></p>
         </div>
       </div>
     </div>
