--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "application" %>
     <%= favicon_tag 'images/logo_or.png' %>
     <!-- Google result text-->
-    <title>Olimpia Rospigliosi Agency | PR & Comunicazione</title>
+    <title>Assaporami business | Servizi di ristorazioni aziendali innovativi</title>
     <!-- Google result description-->
     <meta name="description" content="OR è un'agenzia italiana di PR & Comunicazione integrata che si occupa della relazione con i media e cura la strategia di sviluppo del marchio degli attori del lusso, della moda, del design e dell'arte.">
 
