--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Olimpia Rospigliosi Agency - Servizi
+title: Assaporami - Servizi per mangiare meglio in azienda
 ---
 
 <div class="banner banner-white bg-white">
