--- a/source/layouts/_footer_top.html.erb
+++ b/source/layouts/_footer_top.html.erb
@@ -6,7 +6,7 @@
         <div class="row d-flex">
           <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left">
             <h5>ABOUT</h5>
-            <p>OR Pr & Comunicazione offre attività personalizzate che includono posizionamento del brand, relazioni media e organizzazione eventi.</p>
+            <p>Assaporami offre dei servizi di ristorazione personalizzati per aziende che includono food delivery, corner in-house con o senza personale con cibo gustoso, sano ed fresco.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 col-xl-3 text-left">
             <h5>OR-PR</h5>
@@ -25,10 +25,10 @@
           <div class="col-12 col-md-4 col-lg-4 col-xl-3 text-left">
             <h5>CONTATTI</h5>
             <p>
-                Piazza Borromeo, 10 <br>
-                20123 Milano - IT <br>
-                Tel. +39 0236585108 <br>
-                info@olimpiarospigliosi.it <br>
+                Via Mac Mahon, 46 <br>
+                20155 Milano - IT <br>
+                Tel. +39 +390236704143 <br>
+                info@assaporami.it <br>
             </p>
           </div>
         </div>
