modifica titola about

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -10,7 +10,7 @@ title: Assaporami Business - About
         <div class="d-flex justify-content-center">
           <div class="banner-about-content kill-padding-lr">
             <div id="about-title">
-              <h3 class="h3-responsive">OR - Olimpia Rospigliosi PR & Comunicazione</h3>
+              <h3 class="h3-responsive">Assaporami - Servizi di ristorazione innovativi per aziende</h3>
             </div>
             <div id="about-text">
               <p class="p-responsive">Olimpia Rospigliosi si avvale di esperti collaboratori per creare un team personalizzato e offrire servizi di posizionamento del brand, di supporto commerciale, di comunicazione e di produzione eventi.
