footer bottom progress

--- a/source/layouts/_footer_top.html.erb
+++ b/source/layouts/_footer_top.html.erb
@@ -6,10 +6,10 @@
         <div class="row d-flex">
           <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left">
             <h5>ABOUT</h5>
-            <p>Assaporami offre dei servizi di ristorazione personalizzati per aziende che includono food delivery, corner in-house con o senza personale con cibo gustoso, sano ed fresco.</p>
+            <p>Assaporami offre dei servizi di ristorazione personalizzati per aziende che includono food delivery personalizzato, corner in-house con o senza personale con cibo gustoso, sano ed fresco.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 col-xl-3 text-left">
-            <h5>OR-PR</h5>
+            <h5>ASSAPORAMI</h5>
             <div class="d-flex">
                 <ul class="list-unstyled" id="ul-margin-right">
                   <li id="li-mb"><%= link_to "About", "/about.html" %></li>
@@ -27,7 +27,7 @@
             <p>
                 Via Mac Mahon, 46 <br>
                 20155 Milano - IT <br>
-                Tel. +39 +390236704143 <br>
+                Tel. +39 0236704143 <br>
                 info@assaporami.it <br>
             </p>
           </div>
