--- a/source/layouts/_footer_bottom.html.erb
+++ b/source/layouts/_footer_bottom.html.erb
@@ -1,4 +1,5 @@
-  <div class="footer">
+<div class="footer-bottom-inner">
+  <div class="container mb-0 pb-0">
     <div class="row footer-bottom">
       <div class="col-12 col-md-4 d-flex justify-content-center footer-scaricalapp navbar-rospigliosi">
 
@@ -33,6 +34,7 @@
       </div>
     </div>
   </div>
+</div>
 
 
 
