--- a/source/layouts/_footer_bottom.html.erb
+++ b/source/layouts/_footer_bottom.html.erb
@@ -1,15 +1,15 @@
 <div class="footer-bottom-inner">
   <div class="container mb-0 pb-0">
     <div class="row footer-bottom">
-      <div class="col-12 col-md-4 d-flex justify-content-center footer-scaricalapp navbar-rospigliosi">
+      <div class="col-12 col-md-4 footer-scaricalapp navbar-rospigliosi">
 
+        <h5>SCARICA L'APP</h5>
         <div class="d-flex align-items-center">
-          <p>SCARICA L'APP</p>
-          <% link_to "index.html", class: "footer-brand" do %>
+          <% link_to "https://apps.apple.com/app/id1136241622", class: "footer-brand" do %>
             <%= image_tag "ios.svg" %>
           <!-- https://www.kisspng.com/png-logo-brand-number-1942775/ -->
           <% end %>
-          <% link_to "index.html", class: "footer-brand" do %>
+          <% link_to "https://play.google.com/store/apps/details?id=com.assaporami.assaporami", class: "footer-brand" do %>
             <%= image_tag "android.svg" %>
           <!-- https://www.kisspng.com/png-logo-brand-number-1942775/ -->
           <% end %>
