--- a/source/stylesheets/components/_footer_bottom.scss
+++ b/source/stylesheets/components/_footer_bottom.scss
@@ -6,9 +6,16 @@
 
 .footer-bottom {
   background: transparent;
-  height: 56px;
+
   display: flex;
   align-item: center;
+
+    h5 {
+    color: #ffff;
+    font-size: 16px;
+    margin: 0px 0px 8px 0px;
+    text-align: left;
+  }
 }
 
 .footer-bottom-links {
@@ -55,6 +62,9 @@
 
 .footer-bottom .footer-brand img {
   width: 100px;
+  padding: 0px 8px 0px 0px;
 }
+
+
 
 
