form contact page

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -36,10 +36,17 @@ title: Assaporami Business - Contatti
               </div>
             </div>
 
-            <div class="form-group">
-              <fieldset class="field">
-                <input class="input form-control" type="company" name="company" placeholder="Azienda" id="company" required>
-              </fieldset>
+            <div class="form-row">
+              <div class="col-6 form-group">
+                <fieldset class="field">
+                  <input class="input form-control" type="text" name="company" placeholder="Azienda" id="company" required>
+                </fieldset>
+              </div>
+              <div class="col-6 form-group">
+                <fieldset class="field">
+                  <input class="input form-control" type="text" name="employees" placeholder="Numero di dipendenti" id="employees" required>
+                </fieldset>
+              </div>
             </div>
 
             <div class="form-group">
