home page modif

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -149,9 +149,9 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
               <h3><%= event.date %></h3>
             </div>
           </div>
-        </div><!--/.col-->
+        </div>
       <% end %>
-    </div><!--/.row-->
+    </div>
   </div>
 </div>
 
